# otus_cpp_homework_2

./: CMakeLists.txt  README.md
include/: common.h
src/: main.cpp
test/: gtest.cpp
